--- a/OrthancInstaller/Configuration.json
+++ b/OrthancInstaller/Configuration.json
@@ -9,12 +9,12 @@
 
   // Path to the directory that holds the heavyweight files
   // (i.e. the raw DICOM instances)
-  "StorageDirectory" : "C:/Orthanc/OrthancStorage",
+  "StorageDirectory" : "OrthancStorage",
 
   // Path to the directory that holds the SQLite index (if unset,
   // the value of StorageDirectory is used). This index could be
   // stored on a RAM-drive or a SSD device for performance reasons.
-  "IndexDirectory" : "C:/Orthanc/OrthancStorage",
+  "IndexDirectory" : "OrthancStorage",
 
   // Enable the transparent compression of the DICOM instances
   "StorageCompression" : false,
